--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>زب عجيب</title>
     <link rel="stylesheet" href="waw.css" />
   </head>
   <body>
-    <h1 style="color:"white";">انزل عليه</h1>
+    <h1 style="color: white">انزل عليه</h1>
     <div id="baz3a">
       <button class="bza3" id="a"></button>
       <button class="bza3" id="b"></button>
@@ -31,12 +31,12 @@
         baz3a.classList.toggle("show");
       });
     </script>
-        <script>
-        function playSound() {
-            var sound = document.getElementById('sound');
-            sound.currentTime = 0; 
-            sound.play(); 
-        }
+    <script>
+      function playSound() {
+        var sound = document.getElementById("sound");
+        sound.currentTime = 0;
+        sound.play();
+      }
     </script>
   </body>
 </html>
